--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,20 @@ html {
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
+body{
+magin:20px;
+}
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
 .box{
 	background:#ffff;
         width: 100%;
